--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,13 @@ jobs:
 
       - name: Install dependencies
         run: pip install -r requirements.txt
+      
+      - name: Install CodeRabbit
+        run: pip install coderabbit
 
+      - name: Run CodeRabbit
+        run: coderabbit run
+      
       - name: Run tests
         run: python -m unittest discover -s tests
 
